--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bs-pretty-message": "~1.0.0",
     "lodash.isfunction": "~3.0.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "~8.5.0"
+  },
   "peerDependencies": {
     "browser-sync": "2.x.x",
     "webpack": "1 || 2 || ^2.0.0-beta || ^2.1.0-beta"
